get command from the command line

--- a/SRC/CMakeLists.txt
+++ b/SRC/CMakeLists.txt
@@ -11,4 +11,5 @@ add_executable(SRC
         Nucleotide.h
         NucleotideException.h
         TestDnaSequence.cpp
-        TestDnaSequence.h)
+        TestDnaSequence.h
+       )
